--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -12,7 +12,7 @@
     color: #FD6E0A;
   }
    .dark-01{
-    181818
+    color: #181818;
    }
 
   .dark-02{
@@ -21,6 +21,23 @@
     
     .dark-03{
         color: #757575;
+    }
+
+    .secendary-text{
+      color: #181818;
+      font-weight: 800;
+      font-size: 35px;
+    }
+
+    .secendary-bg{
+      background-color: #FFF8F3;
+    }
+    .third-bg{
+      background-color: #FFF8F3;
+    }
+
+    .center-tex{
+      text-align: center;
     }
     
   .btn-primary{
@@ -91,4 +108,28 @@
 
 .banner-description{
     font-size: 18px;
+}
+
+/* style about section */
+
+.about{
+  max-width: 1140px;
+
+  margin: 130px auto;
+}
+
+.about-me{
+  display: flex;
+  gap: 50px;
+  justify-content: space-around;
+}
+
+.about-div1{
+  align-items: center;
+  padding: 131px 156px;
+  background-color: #FFF8F3;
+}
+
+.margin-b{
+  margin-bottom: 30px;
 }
